오류 잡기 위한 커밋

--- a/src/main/resources/templates/support/support-detail.html
+++ b/src/main/resources/templates/support/support-detail.html
@@ -442,6 +442,7 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script th:inline="javascript">
     let memberDTO = [[${memberDTO}]];
+    let supportRequestDTO = [[${supportRequestDTO}]];
 </script>
 <script src="/js/main/header.js"></script>
 <script src="/js/support/support-rice-modal.js"></script>
