서현임시커밋

--- a/src/main/resources/templates/community/free-detail.html
+++ b/src/main/resources/templates/community/free-detail.html
@@ -79,17 +79,17 @@
                             </div>
                             <div class="singUp-btn">
                                 <button class="singUp1">취소</button>
-                                <button class="singUp" type="submit">등록</button>
+                                <button class="singUp" type="button">등록</button>
                             </div>
                         </div>
                         </th:block>
                         <!--  -->
                         <div style="height: 33px;"></div>
                         <!-- 댓글 없을때 -->
-                        <div class="comment-list" style="display: none;">
-                            <p class="NoComment">댓글이 없습니다.</p>
-                            <p class="NoComment2">첫 댓글을 남겨보세요</p>
-                        </div>
+<!--                        <div class="comment-list" style="display: none;">-->
+<!--                            <p class="NoComment">댓글이 없습니다.</p>-->
+<!--                            <p class="NoComment2">첫 댓글을 남겨보세요</p>-->
+<!--                        </div>-->
 
                         <!-- 댓글 있을때 -->
                         <ul>
