--- a/src/main/resources/templates/community/review-create.html
+++ b/src/main/resources/templates/community/review-create.html
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                 </label>
-                <label id="photo-picker2"></label>
+                <label id="photo-picker2"></label> <!--이미지 들어가는 곳-->
                 <div class="content">
                     <div class="content-container">
                         <div class="title">
