--- a/src/main/resources/templates/community/free-board-modify.html
+++ b/src/main/resources/templates/community/free-board-modify.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자유게시판 작성하기</title>
+    <title>자유게시판 수정하기</title>
     <link rel="stylesheet" href="/css/community/free-create.css">
     <link rel="stylesheet" href="/css/main/header.css">
     <link rel="stylesheet" href="/css/main/footer.css">
@@ -17,73 +17,61 @@
     <!-- 전체 div -->
     <div class="board">
         <section class="board-container">
-            <div class="register">
-                <div class="register-container">
-                    <button class="register-btn" type="button">등록</button>
+            <form action="">
+                <div class="register">
+                    <div class="register-container">
+                        <button class="register-btn" type="button" disabled>수정</button>
+                    </div>
                 </div>
-            </div>
-            <form name="form" method="post">
                 <label id="photo-picker">
                     <div class="photo" id="photo">
-                        <input
-                                id="file_input"
-                                type="file"
-                                style="display: none"
-                                name="imgFile"
-                                accept="image/*"
-                        />
+                        <input id="file_input" type="file" multiple style="display: none;">
                         <div class="photo-container">
                             <div class="photo-img"></div>
                         </div>
                     </div>
                 </label>
-                <label id="photo-picker2"></label> <!--이미지 들어가는 곳-->
+                <label id="photo-picker2"></label>
                 <div class="content">
                     <div class="content-container">
                         <div class="title">
                             <div class="title-container">
                                 <label class="title-label">
-                                    <input
-                                            type="text"
-                                            placeholder="제목을 입력해주세요."
-                                            class="title-input"
-                                            name="boardTitle"
-                                            value=""
-                                    />
+                                    <input type="text" placeholder="제목을 입력해주세요." class="title-input">
                                 </label>
                             </div>
                         </div>
                         <div class="line"></div>
                         <div class="contents">
                             <span class="contents-span1">
-                                <textarea name="boardContent" class="contents-text" placeholder="궁금했던 모든 것을 자유롭게 작성해보세요.
+                                <textarea class="contents-text" placeholder="궁금했던 모든 것을 자유롭게 작성해보세요.
 
     예) 봉사 함께하실 심청이 구합니다.
     예) 후원은 어떻게 하면 되나요?
-
+                                
     ※ 주제에 맞지 않는 글이나 커뮤니티 이용정책에 위배되는 글은 신고의 대상이 됩니다.
     ※ 일정 수 이상의 신고를 받으면 작성한 글이 숨김 및 삭제될 수 있습니다."></textarea>
                             </span>
                         </div>
                     </div>
                 </div>
-                <div >
-                    <div class="modal">
-                        <h4 class="modal-title">게시물 등록</h4>
-                        <div class="modal-content">게시물을 등록하시겠습니까?</div>
-                        <div class="modal-choce">
-                            <div class="choce1">
-                                <button class="choce1-btn" type="button">취소</button>
-                            </div>
-                            <div class="choce2">
-                                <button class="choce2-btn" type="submit">등록</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-back"></div>
-                </div>
             </form>
         </section>
+        <div >
+            <div class="modal">
+                <h4 class="modal-title">게시물 등록</h4>
+                <div class="modal-content">게시물을 등록하시겠습니까?</div>
+                <div class="modal-choce">
+                    <div class="choce1">
+                        <button class="choce1-btn">취소</button>
+                    </div>
+                    <div class="choce2">
+                        <button class="choce2-btn">등록</button>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-back"></div>
+        </div>
     </div>
     
 
@@ -92,14 +80,6 @@
     
 </body>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-<script th:inline="javascript">
-    let fileDTOS = null;
-    let freeBoardDTO = [[${freeBoardDTO}]];
-    if (freeBoardDTO == null || freeBoardDTO == undefined){
-    }else {
-        fileDTOS = freeBoardDTO.fileDTOS;
-    }
-</script>
 <script src="/js/main/header.js"></script>
 <script src="/js/community/free-create.js"></script>
 </html>
