--- a/src/main/resources/templates/join-login/change-password.html
+++ b/src/main/resources/templates/join-login/change-password.html
@@ -38,8 +38,8 @@
                             <div class="input-include-div">
                                 <span class="input-include-span">
                                     <input type="password" class="input-write" placeholder="변경할 비밀번호 확인">
-                                    <input hidd name="memberEmail" type="hidden" class="input-write" placeholder="변경할 비밀번호">
-                                    <input name="randomKey" type="hidden" class="input-write" placeholder="변경할 비밀번호">
+                                    <input name="memberEmail" th:value="${memberEmail}" type="hidden" class="input-write">
+                                    <input name="randomKey" th:value="${rnadomKey}" type="hidden" class="input-write">
                                 </span>
                             </div>
                             <div class="email-error"></div>
