--- a/src/main/resources/templates/funding/funding-initial-info.html
+++ b/src/main/resources/templates/funding/funding-initial-info.html
@@ -28,13 +28,13 @@
 }
 </style>
 <body>
-    <div id="view" class="view">
+<div th:insert="~{funding/funding-plan-header.html :: planHeader}"></div>
+<div th:insert="~{funding/funding-topContent.html :: topContent}"></div>
+<div id="view" class="view" th:fragment="initialInfo">
         <div class="project-wrap">
-            <div th:insert="~{funding/funding-plan-header.html :: planHeader}"></div>
-            <div th:insert="~{funding/funding-topContent.html :: topContent}"></div>
 
             <!--모달창-->
-            <div class="modal-layer" style="display: none;">
+            <div class="modal-layer" style="display: block;">
                 <div class="modal-wrapper">
                     <div class="modal-back">
                         <div class="modal-posWrap">
