--- a/src/main/resources/templates/community/free-create.html
+++ b/src/main/resources/templates/community/free-create.html
@@ -22,7 +22,7 @@
                     <button class="register-btn" type="button">등록</button>
                 </div>
             </div>
-            <form name="form" method="post">
+            <form name="form" method="post" enctype="multipart/form-data">
                 <label id="photo-picker">
                     <div class="photo" id="photo">
                         <input
