--- a/src/main/resources/templates/volunteer-work/work-apply-modal.html
+++ b/src/main/resources/templates/volunteer-work/work-apply-modal.html
@@ -40,24 +40,24 @@
                                         <input type="text" name=""  value="" readonly="readonly" title="이름" class="apply-text">
                                     </td>
                                 </tr>
-                                <tr>
-                                    <th scope="row">* 연락처</th>
-                                    <td>
-                                        <select name="" id="" title="핸드폰번호 앞자리" class="apply-select">
-                                            <option value="">선택</option>
-                                            <option value="010">010</option>
-                                            <option value="011">011</option>
-                                            <option value="016">016</option>
-                                            <option value="017">017</option>
-                                            <option value="018">018</option>
-                                            <option value="019">019</option>
-                                        </select>
-                                        <span class="">-</span>
-                                        <input type="text" id="" name="" value="" title="핸드폰번호 중간자리" maxlength="4" class="apply-text apply-width">
-                                        <span class="">-</span>
-                                        <input type="text" id="" name="" value="" title="핸드폰번호 뒷자리" maxlength="4" class="apply-text apply-width">
-                                    </td>
-                                </tr>
+<!--                                <tr>-->
+<!--                                    <th scope="row">* 연락처</th>-->
+<!--                                    <td>-->
+<!--                                        <select name="" id="" title="핸드폰번호 앞자리" class="apply-select">-->
+<!--                                            <option value="">선택</option>-->
+<!--                                            <option value="010">010</option>-->
+<!--                                            <option value="011">011</option>-->
+<!--                                            <option value="016">016</option>-->
+<!--                                            <option value="017">017</option>-->
+<!--                                            <option value="018">018</option>-->
+<!--                                            <option value="019">019</option>-->
+<!--                                        </select>-->
+<!--                                        <span class="">-</span>-->
+<!--                                        <input type="text" id="" name="" value="" title="핸드폰번호 중간자리" maxlength="4" class="apply-text apply-width">-->
+<!--                                        <span class="">-</span>-->
+<!--                                        <input type="text" id="" name="" value="" title="핸드폰번호 뒷자리" maxlength="4" class="apply-text apply-width">-->
+<!--                                    </td>-->
+<!--                                </tr>-->
                                 <tr>
                                     <th scope="row">* 이메일</th>
                                     <td>
