회원탈퇴 완료

--- a/src/main/resources/templates/admin/payment.html
+++ b/src/main/resources/templates/admin/payment.html
@@ -22,7 +22,7 @@
     <section class="content">
         <div class="content__header">
             <span>공양미 내역</span>
-            <a href="javascript:void(0)"> 로그아웃 </a>
+            <a href="/member/logout"> 로그아웃 </a>
         </div>
         <main class="content__main">
             <div class="table__container">
