--- a/src/main/resources/templates/admin/sponsorship-request.html
+++ b/src/main/resources/templates/admin/sponsorship-request.html
@@ -38,7 +38,7 @@
     <section class="content">
         <div class="content__header">
             <span>후원요청 관리</span>
-            <a href="javascript:void(0)"> 로그아웃 </a>
+            <a href="/member/logout"> 로그아웃 </a>
         </div>
         <main class="content__main">
             <div class="table__container">
