--- a/src/main/resources/templates/mypage/withdraw-check.html
+++ b/src/main/resources/templates/mypage/withdraw-check.html
@@ -35,7 +35,7 @@
                         </div>
                         <div class="withdraw-content">
                             불편한 사항이 있다면 언제든 심봉사에 알려주세요.
-                            <a href="">심봉사에 문의하기</a>
+<!--                            <a href="">심봉사에 문의하기</a>-->
                         </div>
                     </div>
                 </div>
