--- a/src/main/resources/templates/admin/gongyangmi-refund.html
+++ b/src/main/resources/templates/admin/gongyangmi-refund.html
@@ -7,9 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>공양미 환전 요청</title>
-    <link
-            href="https://hangeul.pstatic.net/hangeul_static/css/nanum-barun-gothic.css"
-            rel="stylesheet"/>
+    <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-barun-gothic.css" rel="stylesheet"/>
     <link rel="stylesheet" href="/css/admin/default.css"/>
     <link rel="stylesheet" href="/css/admin/sidebar.css"/>
     <link rel="stylesheet" href="/css/admin/content.css"/>
@@ -24,7 +22,7 @@
     <section class="content">
         <div class="content__header">
             <span>공양미 환전 관리</span>
-            <a href="/templates/admin/gongyangmi-refund.html"> 로그아웃 </a>
+            <a href="/member/logout"> 로그아웃 </a>
         </div>
         <main class="content__main">
             <div class="table__container">
