--- a/src/main/resources/templates/admin/inquiry.html
+++ b/src/main/resources/templates/admin/inquiry.html
@@ -23,7 +23,7 @@
 
         <div class="content__header">
             <span>문의 관리</span>
-            <a href="javascript:void(0)"> 로그아웃 </a>
+            <a href="/member/logout"> 로그아웃 </a>
         </div>
         <main class="content__main">
             <div class="table__container">
