--- a/src/main/resources/templates/admin/notice.html
+++ b/src/main/resources/templates/admin/notice.html
@@ -25,7 +25,7 @@
         <section class="content">
             <div class="content__header">
               <span>공지 관리</span>
-              <a href="javascript:void(0)"> 로그아웃 </a>
+              <a href="/member/logout"> 로그아웃 </a>
             </div>
             <main class="content__main">
                 <div class="table__container">
