--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -26,7 +26,7 @@
         <div>
             <div class="content__header">
                 <span>회원 관리</span>
-                <a href="javascript:void(0)"> 로그아웃 </a>
+                <a href="/member/logout"> 로그아웃 </a>
             </div>
         </div>
         <main class="content__main">
