--- a/src/main/resources/templates/admin/volunteer-recruitment-board.html
+++ b/src/main/resources/templates/admin/volunteer-recruitment-board.html
@@ -23,7 +23,7 @@
     <section class="content">
         <div class="content__header">
             <span>봉사 모집 자유게시판 관리</span>
-            <a href="javascript:void(0)"> 로그아웃 </a>
+            <a href="/member/logout"> 로그아웃 </a>
         </div>
         <main class="content__main">
             <div class="table__container">
