--- a/src/main/resources/templates/mypage/my-funding-list.html
+++ b/src/main/resources/templates/mypage/my-funding-list.html
@@ -116,7 +116,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="my-support-one-wrap">
+                    <!--<div class="my-support-one-wrap">
                         <div class="my-support-one-place">
                             <div class="my-support-one">
                                 <div class="my-support-img-wrap">
@@ -218,7 +218,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
 
@@ -232,6 +232,10 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script th:inline="javascript">
+    let myFundings = [[${myFundings}]];
+</script>
 <script src="/js/main/header.js"></script>
 <script src="/js/mypage/mypage-header.js"></script>
+<script src="/js/mypage/my-funding-list.js"></script>
 </html>
