--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -176,6 +176,7 @@
                             </div>
                         </div>
                         <div class="header-button">펀딩하기</div>
+                        <a href="/support/support-write"><div class="header-button">후원하기</div></a>
                         <div class="login-user-button-wrapper">
                             <div class="user-button-layout">
                                 <div class="user-avatar">
