펀딩 아이템 삭제 완료

--- a/src/main/resources/templates/funding/funding-item.html
+++ b/src/main/resources/templates/funding/funding-item.html
@@ -393,7 +393,7 @@
                                             </div>
                                         </section>
                                         <div class="buttonWrap">
-                                            <button class="lineButton resetButton buttonStyle" color="grayEditor200">초기화</button>
+<!--                                            <button class="lineButton resetButton buttonStyle" color="grayEditor200">초기화</button>-->
                                             <button class="solidButton saveButton solidButton buttonStyle" type="button" id="saveButton"  color="mainEditorP80" disabled>
                                                 <span>저장</span>
                                             </button>
